--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,20 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Show context
+        uses: actions/github-scripts@v4
+        with:
+          script: |
+            console.log(JSON.stringify(context, null, 2));
+            
+            core.startGroup('Context');
+            core.info(JSON.stringify(context, null, 2));
+            core.endGroup();
+            
+            core.startGroup('Environment Variables');
+            core.info(JSON.stringify(process.env, null, 2));
+            core.endGroup();
+            
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
